--- a/pom.xml
+++ b/pom.xml
@@ -70,7 +70,7 @@
 	</dependencies>
 
 	<build>
-		<finalName>msa_b</finalName>
+		<finalName>app</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
